--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 ## 生产环境
 
 # 变量必须以 VITE_ 为前缀才能暴露给外部读取
-NODE_ENV='production'
+# NODE_ENV='production'
 
 # 是否使用mock，默认使用（设置为false需要设置真实的开发/生产环境VITE_APP_BASE_API）
 VITE_APP_USE_MOCK = true
