--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "screenfull": "6.0.2",
     "vue": "3.3.4",
     "vue-i18n": "9.2.2",
-    "vue-router": "4.2.4"
+    "vue-router": "4.2.4",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.10",
@@ -49,6 +50,7 @@
     "mockjs": "^1.1.0",
     "sass": "^1.58.3",
     "typescript": "^5.0.4",
+    "unocss": "^0.55.1",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
