--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/codemirror": "^5.60.7",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash-es": "^4.17.7",
+    "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
