--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "element-plus": "2.3.9",
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
+    "moment": "^2.29.4",
     "nprogress": "0.2.0",
     "path-browserify": "1.0.1",
     "path-to-regexp": "6.2.1",
