--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wangeditor/editor-for-vue": "5.1.10",
     "axios": "1.4.0",
     "codemirror": "^5.65.13",
+    "crypto-js": "^4.2.0",
     "dayjs": "1.11.9",
     "echarts": "5.4.3",
     "element-plus": "2.3.9",
