--- a/package.json
+++ b/package.json
@@ -12,59 +12,62 @@
     "lint:prettier": "prettier --write \"**/*.{js,cjs,ts,json,tsx,css,less,scss,vue,html,md}\""
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "4.2.3",
-    "@vueuse/core": "10.3.0",
-    "@wangeditor/editor": "^5.1.23",
-    "@wangeditor/editor-for-vue": "5.1.10",
-    "axios": "1.4.0",
-    "codemirror": "^5.65.13",
-    "crypto-js": "^4.2.0",
-    "dayjs": "1.11.9",
-    "echarts": "5.4.3",
-    "element-plus": "2.3.9",
+    "@vitejs/plugin-vue": "5.0.5",
+    "@vueuse/core": "10.11.0",
+    "@wangeditor/editor": "5.1.23",
+    "@wangeditor/editor-for-vue": "5.1.12",
+    "axios": "1.7.2",
+    "codemirror": "5.65.16",
+    "crypto-js": "4.2.0",
+    "dayjs": "1.11.11",
+    "echarts": "5.5.1",
+    "element-plus": "2.7.6",
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "nprogress": "0.2.0",
     "path-browserify": "1.0.1",
-    "path-to-regexp": "6.2.1",
-    "pinia": "2.1.6",
+    "path-to-regexp": "7.0.0",
+    "pinia": "2.1.7",
     "screenfull": "6.0.2",
-    "vue": "3.3.4",
-    "vue-i18n": "9.2.2",
-    "vue-router": "4.2.4",
+    "vue": "3.4.31",
+    "vue-i18n": "9.13.1",
+    "vue-router": "4.4.0",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@iconify-json/ep": "^1.1.10",
-    "@iconify-json/line-md": "^1.1.25",
-    "@iconify/vue": "^4.1.1",
-    "@types/codemirror": "^5.60.7",
-    "@types/js-cookie": "^3.0.3",
-    "@types/lodash-es": "^4.17.7",
-    "@types/mockjs": "^1.0.7",
-    "@types/nprogress": "^0.2.0",
-    "@types/path-browserify": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "eslint-plugin-vue": "^9.13.0",
-    "fast-glob": "^3.2.11",
+    "@iconify-json/ep": "^1.1.15",
+    "@iconify-json/line-md": "^1.1.38",
+    "@iconify/vue": "^4.1.2",
+    "@types/codemirror": "^5.60.15",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mockjs": "^1.0.10",
+    "@types/nprogress": "^0.2.3",
+    "@types/path-browserify": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "fast-glob": "^3.3.2",
     "mockjs": "^1.1.0",
-    "sass": "^1.58.3",
-    "typescript": "^5.0.4",
-    "unocss": "^0.55.1",
-    "unplugin-auto-import": "^0.15.3",
-    "unplugin-icons": "^0.16.1",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.4.8",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.3",
+    "unocss": "^0.58.9",
+    "postcss":"^8.4.39",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-icons": "^0.19.0",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.3",
     "vite-plugin-mock": "2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^1.6.5"
+    "rollup": "2.77.4-1",
+    "vue-tsc": "^2.0.26"
   },
   "engines": {
     "node": ">=16.0.0",
-    "npm": ">= 7.0.0"
+    "npm": ">=7.0.0",
+    "pnpm": ">=8.0.0"
   },
   "license": "MIT"
 }
