--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "crypto-js": "4.2.0",
     "dayjs": "1.11.11",
     "echarts": "5.5.1",
-    "element-plus": "2.7.6",
+    "element-plus": "2.8.5",
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
     "moment": "^2.30.1",
@@ -31,6 +31,7 @@
     "pinia": "2.1.7",
     "screenfull": "6.0.2",
     "vue": "3.4.31",
+    "vue-draggable-plus": "^0.5.4",
     "vue-i18n": "9.13.1",
     "vue-router": "4.4.0",
     "xlsx": "0.18.5"
@@ -51,17 +52,17 @@
     "eslint-plugin-vue": "^9.27.0",
     "fast-glob": "^3.3.2",
     "mockjs": "^1.1.0",
+    "postcss": "^8.4.39",
+    "rollup": "2.77.4-1",
     "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "unocss": "^0.58.9",
-    "postcss":"^8.4.39",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.2",
     "vite": "^5.3.3",
     "vite-plugin-mock": "2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "rollup": "2.77.4-1",
     "vue-tsc": "^2.0.26"
   },
   "engines": {
