--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vueuse/core": "10.11.0",
     "@wangeditor/editor": "5.1.23",
     "@wangeditor/editor-for-vue": "5.1.12",
-    "axios": "1.7.2",
+    "axios": "1.7.7",
     "codemirror": "5.65.16",
     "crypto-js": "4.2.0",
     "dayjs": "1.11.11",
@@ -27,7 +27,7 @@
     "moment": "^2.30.1",
     "nprogress": "0.2.0",
     "path-browserify": "1.0.1",
-    "path-to-regexp": "7.0.0",
+    "path-to-regexp": "8.2.0",
     "pinia": "2.1.7",
     "screenfull": "6.0.2",
     "vue": "3.4.31",
@@ -53,7 +53,7 @@
     "fast-glob": "^3.3.2",
     "mockjs": "^1.1.0",
     "postcss": "^8.4.39",
-    "rollup": "2.77.4-1",
+    "rollup": "2.79.2",
     "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "unocss": "^0.58.9",
