--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "dependencies": {
     "@vitejs/plugin-vue": "5.0.5",
     "@vueuse/core": "10.11.0",
+    "@toast-ui/editor": "3.2.2",
+    "prismjs": "1.30.0",
+    "tui-color-picker": "2.2.8",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "3.1.0",
+    "@toast-ui/editor-plugin-color-syntax": "3.1.0",
     "@wangeditor/editor": "5.1.23",
     "@wangeditor/editor-for-vue": "5.1.12",
     "axios": "1.7.7",
