build: 更新package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:eslint": "eslint  --fix --ext .ts,.js,.vue ./src ",
     "lint:prettier": "prettier --write \"**/*.{js,cjs,ts,json,tsx,css,less,scss,vue,html,md}\""
   },
+  "type":"module",
   "dependencies": {
     "@vitejs/plugin-vue": "5.0.5",
     "@vueuse/core": "10.11.0",
